Fix postion on close settings button, opted for align-self

--- a/styles.css
+++ b/styles.css
@@ -295,7 +295,7 @@ footer{
     display: flex;
     flex-direction: column;
     border: 2px solid var(--text-color);
-    padding: 10px 40px 20px;
+    padding: 20px;
     border-radius: 15px;
     gap: 10px;
     background-color: var(--off-white);
@@ -340,11 +340,9 @@ footer{
 }
 
 #closeSettingsBtn{
-    position: relative;
-    width: 30px;
-    height: 30px;
-    left: 300px;
     text-decoration: underline;
+    align-self: flex-end;
+    padding: 0px;
 }
 
 .settings input{
